force-app/main/default/objects/Work_Item__c/Work_Item__c.object-meta.xml
<CustomObject>
    <description>A unit of work synced from an external system. Keyed on External_Id__c, the stable remote ID, so upserts survive project renames and issue moves.</description>
    <label>Work Item</label>
    <nameField>
        <displayFormat>WI-{0000}</displayFormat>
        <label>Work Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>