force-app/main/default/objects/Work_Item__c/fields/Assignee__c.field-meta.xml
<CustomField>
    <fullName>Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Salesforce user this item is assigned to.</description>
    <label>Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Assigned Work Items</relationshipLabel>
    <relationshipName>Assigned_Work_Items</relationshipName>
    <type>Lookup</type>
</CustomField>