force-app/main/default/objects/Work_Item__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>The date work is due - Jira duedate, Asana due_on. A Date, not a DateTime, for the same reason as Start_Date__c. Asana&apos;s due_at (a due time) is not read, and writing due_on clears any due time in Asana. Inbound sync writes it whenever a delivery carries the field, including clearing it.</description>
    <inlineHelpText>When this is due, as a calendar date.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>