force-app/main/default/objects/Work_Item__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>Namespaced stable ID of the remote record, e.g. jira:10023. Uniqueness in Salesforce is per-field, not per-system, so the system prefix is what keeps a Jira issue ID from colliding with an Asana GID. All upserts key off this field. Not required: unique fields permit multiple nulls, so records can still be created by hand.</description>
    <externalId>true</externalId>
    <inlineHelpText>Namespaced remote ID, e.g. jira:10023. Never the issue key - keys change when a project is renamed or an issue is moved.</inlineHelpText>
    <label>External Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>