force-app/main/default/objects/Work_Item__c/fields/External_Key__c.field-meta.xml
<CustomField>
    <fullName>External_Key__c</fullName>
    <description>Human-readable key from the external system, e.g. PHQ-38. Display only - this value is not stable and must never be used as a sync key.</description>
    <inlineHelpText>Display key such as PHQ-38. Not stable; do not key integrations off this.</inlineHelpText>
    <label>External Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>