force-app/main/default/objects/Work_Item__c/fields/External_URL__c.field-meta.xml
<CustomField>
    <fullName>External_URL__c</fullName>
    <description>Deep link to this item in the external system.</description>
    <label>External URL</label>
    <type>Url</type>
</CustomField>