force-app/main/default/objects/Work_Item__c/fields/Last_Synced__c.field-meta.xml
<CustomField>
    <fullName>Last_Synced__c</fullName>
    <description>When Salesforce last successfully pulled this record.</description>
    <label>Last Synced</label>
    <type>DateTime</type>
</CustomField>