force-app/main/default/objects/Work_Item__c/fields/Parent_Work_Item__c.field-meta.xml
<CustomField>
    <fullName>Parent_Work_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Self-lookup for hierarchy, e.g. a Story under an Epic. Nothing prevents a reference cycle; validation rules for that are out of scope for this build.</description>
    <label>Parent Work Item</label>
    <referenceTo>Work_Item__c</referenceTo>
    <relationshipLabel>Child Work Items</relationshipLabel>
    <relationshipName>Child_Work_Items</relationshipName>
    <type>Lookup</type>
</CustomField>