force-app/main/default/objects/Work_Item__c/fields/Pending_Push_Fields__c.field-meta.xml
<CustomField>
    <fullName>Pending_Push_Fields__c</fullName>
    <description>Which fields changed in Salesforce and have not yet reached the source system - SyncField names joined by semicolons, e.g. STATUS;TITLE. WorkItemTriggerHandler adds to it on a user edit; WorkItemSyncService pushes exactly these and, after re-reading the row under a lock, removes only the ones the source confirmed, so an edit made mid-push is neither lost nor marked Synced early. A field the source refused stays listed until a later push succeeds. Inbound sync does not overwrite a field while it is listed here. Internal bookkeeping: on no DTO and edited by no user.</description>
    <inlineHelpText>Fields waiting to reach the source system. Maintained by the sync; not editable.</inlineHelpText>
    <label>Pending Push Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>