force-app/main/default/objects/Work_Item__c/fields/Remote_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>Remote_Last_Modified__c</fullName>
    <description>Last-modified timestamp reported by the external system. Compared against the incoming payload to decide which side wins a conflict.</description>
    <label>Remote Last Modified</label>
    <type>DateTime</type>
</CustomField>