force-app/main/default/objects/Work_Item__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The date work is planned to start - what the board calls the assigned date. A Date, not a DateTime: it is a calendar day in both source systems, and a DateTime would shift it across midnight for anyone west of Greenwich. Only sources whose Board_Source__mdt record says Supports_Start_Date__c carry one; Asana on the free tier does not, and Apex refuses one for it. Inbound sync writes it whenever a delivery carries the field, including clearing it.</description>
    <inlineHelpText>Planned start. Only for sources that support start dates.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>