force-app/main/default/objects/Work_Item__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Workflow state. Unspecified is the default and the landing value for any external status that has no Salesforce equivalent yet, which is what lets this picklist stay restricted without the sync failing on custom Jira workflows.</description>
    <inlineHelpText>Unspecified means the external status has not been mapped to a Salesforce value yet.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unspecified</fullName>
                <default>true</default>
                <label>Unspecified</label>
            </value>
            <value>
                <fullName>To Do</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>