force-app/main/default/objects/Work_Item__c/fields/Story_Points__c.field-meta.xml
<CustomField>
    <fullName>Story_Points__c</fullName>
    <description>Estimate. One decimal place so half-point estimates (0.5, 1.5) round-trip from Jira intact. Max 999.9.</description>
    <label>Story Points</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>