force-app/main/default/objects/Work_Item__c/fields/Sync_Error__c.field-meta.xml
<CustomField>
    <fullName>Sync_Error__c</fullName>
    <description>Why the last push failed, in words a person can act on - written by WorkItemSyncService when a push fails, cleared when one succeeds or when a new edit is staged. The detail behind it, including the raw response, is in Integration_Log__c. This is what lets a card show Failed with the reason rather than Failed alone. Internal only: on no guest DTO.</description>
    <inlineHelpText>Why the last push to the source system failed. Cleared when a push succeeds.</inlineHelpText>
    <label>Sync Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>