force-app/main/default/objects/Work_Item__c/fields/Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Sync_Status__c</fullName>
    <description>Outcome of the last sync attempt. Cannot be Synced while Status__c is Unspecified - see the Sync_Status_Requires_Known_Status validation rule.</description>
    <label>Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Synced</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>