force-app/main/default/objects/Work_Item__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description
  >One-line title of the remote issue - Jira&apos;s issue.fields.summary. This is what a person calls the task; Name is the record&apos;s auto number and External_Key__c is the remote identifier, and neither reads as a title.</description>
    <inlineHelpText
  >Title of the work, as the external system states it. Synced; edits here are overwritten on the next inbound update.</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>