force-app/main/default/objects/Work_Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>What kind of work this is. Epic, Story, Bug, Task and Spike are Jira&apos;s vocabulary; Book, Online Course, Video, Tutorial, Trailhead and Superbadge are the learning board&apos;s. One restricted picklist for both, because the board nests on this field and two type fields would mean two code paths through one shared column builder. Restricted on purpose: this value reaches the public board, so an unrestricted picklist would publish whatever somebody typed into Asana. The raw vendor string is kept privately in Source_Type__c. Unspecified is the default and the landing value for any external type that has no mapping yet, which is what lets this picklist stay restricted without the sync failing.</description>
    <inlineHelpText>Unspecified means the external issue type has not been mapped to a Salesforce value yet.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unspecified</fullName>
                <default>true</default>
                <label>Unspecified</label>
            </value>
            <value>
                <fullName>Epic</fullName>
            </value>
            <value>
                <fullName>Story</fullName>
            </value>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>Task</fullName>
            </value>
            <value>
                <fullName>Spike</fullName>
            </value>
            <value>
                <fullName>Book</fullName>
            </value>
            <value>
                <fullName>Online Course</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>Tutorial</fullName>
            </value>
            <value>
                <fullName>Trailhead</fullName>
            </value>
            <value>
                <fullName>Superbadge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>