force-app/main/default/objects/Work_Item__c/validationRules/Sync_Status_Requires_Known_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Sync_Status_Requires_Known_Status</fullName>
    <active>true</active>
    <description>A work item whose external status has not been mapped yet cannot claim to be Synced. Unspecified means the mapping is still missing, so Synced would be a lie about the state of the integration.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;Unspecified&quot;),
    ISPICKVAL(Sync_Status__c, &quot;Synced&quot;)
)</errorConditionFormula>
    <errorDisplayField>Sync_Status__c</errorDisplayField>
    <errorMessage>Sync Status cannot be Synced while Status is Unspecified. Map the external status to a Salesforce value first.</errorMessage>
</ValidationRule>